Cycles: lighting flick #41267

Closed
opened 2014-07-31 12:47:34 +02:00 by Serj Maiorov · 11 comments

System Information
Operating system and graphics card
Windows 7 Ultimate
GeForce GTX 780 Ti
i7-4770k CPU @ 3.50 GHz

Blender Version
Broken:
2.70.5
2.71.3
Worked:
2.69

Short description of error
There is a weird "flick" that change a bit the lighting for no reason.
Same file works normally on 2.69 but 2.70.5 and up its changing the light (although its mostly a HDR lighting).
Another thing is that the older version renders about 25% less time (Stamp with render time included on the attached frames).
Added 2 Blend files, and two sequences to show the change.
Weirdly, the 2.69 version renders normally in 2.7 but not the original version created with 2.7 itself

Download files (WeTransfer):
http://we.tl/FQJ1CtbYns

Exact steps for others to reproduce the error
Just open every file in its version and hit animation render (2 frames each)

**System Information** Operating system and graphics card Windows 7 Ultimate GeForce GTX 780 Ti i7-4770k CPU @ 3.50 GHz **Blender Version** Broken: 2.70.5 2.71.3 Worked: 2.69 **Short description of error** There is a weird "flick" that change a bit the lighting for no reason. Same file works normally on 2.69 but 2.70.5 and up its changing the light (although its mostly a HDR lighting). Another thing is that the older version renders about 25% less time (Stamp with render time included on the attached frames). Added 2 Blend files, and two sequences to show the change. Weirdly, the 2.69 version renders normally in 2.7 but not the original version created with 2.7 itself Download files (WeTransfer): http://we.tl/FQJ1CtbYns **Exact steps for others to reproduce the error** Just open every file in its version and hit animation render (2 frames each)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SerjMaiorov

Added subscriber: @SerjMaiorov

Added subscribers: @Sergey, @ThomasDinges

Added subscribers: @Sergey, @ThomasDinges

There is indeed a difference between the 2 frames, @Sergey any idea?

@SerjMaiorov: For next time, please try to simplify the files as much as possible, like remove unneeded objects, and also 20 samples are sufficient to see the issue.

There is indeed a difference between the 2 frames, @Sergey any idea? @SerjMaiorov: For next time, please try to simplify the files as much as possible, like remove unneeded objects, and also 20 samples are sufficient to see the issue.
Sergey Sharybin was assigned by Bastien Montagne 2014-08-07 15:51:44 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Does someone have a .blend file still?

Does someone have a .blend file still?
Author

Here is the link again:
http://we.tl/rN3ZCjKUE9

Here is the link again: http://we.tl/rN3ZCjKUE9

This issue was referenced by 2e5e1e2028

This issue was referenced by 2e5e1e20282f127a9044e08bc7c2b08e8596a6ee

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2e5e1e2028.

Closed by commit 2e5e1e2028.

This issue was referenced by 6e84b3c798d1d05ec40bfaa216be57559a1f20b5

This issue was referenced by 6e84b3c798d1d05ec40bfaa216be57559a1f20b5
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41267
No description provided.