Fix T41267: Wrong light distribution with when having objects with motion blur